--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x112d78940>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x10635c9b0>}"
       ]
      },
      "execution_count": 5,
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,6 +253,7 @@
     "\n",
     "        course_dept = sub_account_dict[c1.account_id]\n",
     "        course_name = c1.name\n",
+    "        course_state = c1.workflow_state\n",
     "\n",
     "        files_ = c1.get_files()\n",
     "        assn_ = c1.get_assignments()\n",
@@ -268,15 +269,15 @@
     "\n",
     "\n",
     "\n",
-    "        return [c1.id, course_dept, course_name, len(file_utimes), len(assn_utimes), \n",
+    "        return [c1.id, course_dept, course_name, course_state, len(file_utimes), len(assn_utimes), \n",
     "                len(fa_times), fa_times.max()]\n",
     "    except Exception as e:\n",
-    "        return [None, None, None, None, None, None, None]"
+    "        return [None, None, None, None, None, None, None, None]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +326,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2361</th>\n",
+       "      <th>1493</th>\n",
        "      <td>3145</td>\n",
        "      <td>CNV-SANDBOX</td>\n",
        "      <td>Canvas Core Team Sandbox</td>\n",
@@ -333,7 +334,7 @@
        "      <td>2020-05-05T16:03:19Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2362</th>\n",
+       "      <th>1494</th>\n",
        "      <td>3146</td>\n",
        "      <td>CNV-GROW</td>\n",
        "      <td>Growing with Canvas</td>\n",
@@ -341,7 +342,7 @@
        "      <td>2020-05-05T16:05:38Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2363</th>\n",
+       "      <th>1495</th>\n",
        "      <td>3147</td>\n",
        "      <td>Admin</td>\n",
        "      <td>Admin Guide</td>\n",
@@ -349,7 +350,7 @@
        "      <td>2020-05-08T18:13:52Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2364</th>\n",
+       "      <th>1496</th>\n",
        "      <td>3148</td>\n",
        "      <td>IntroCDO_MBA22</td>\n",
        "      <td>Career Foundations - Incoming MBA Class of 2022</td>\n",
@@ -357,7 +358,7 @@
        "      <td>2020-05-11T19:13:28Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2365</th>\n",
+       "      <th>1497</th>\n",
        "      <td>3149</td>\n",
        "      <td>Template1</td>\n",
        "      <td>Template 1</td>\n",
@@ -373,94 +374,94 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4871</th>\n",
-       "      <td>5792</td>\n",
-       "      <td>21M.302 L02</td>\n",
-       "      <td>21M.302 Harmony and Counterpoint II, Lecture 2...</td>\n",
-       "      <td>116</td>\n",
-       "      <td>2020-08-12T14:59:01Z</td>\n",
+       "      <th>4077</th>\n",
+       "      <td>5873</td>\n",
+       "      <td>15.280_FA20</td>\n",
+       "      <td>15.280 Communication for Leaders: H1</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2020-08-22T20:36:10Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4872</th>\n",
-       "      <td>5793</td>\n",
-       "      <td>cwalley</td>\n",
-       "      <td>Temporary Sandbox</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2020-08-12T16:14:14Z</td>\n",
+       "      <th>4078</th>\n",
+       "      <td>5874</td>\n",
+       "      <td>15.280_FA20</td>\n",
+       "      <td>15.280 Communication for Leaders: H2</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2020-08-22T20:36:10Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4873</th>\n",
-       "      <td>5794</td>\n",
-       "      <td>tbdavies</td>\n",
-       "      <td>Temporary Sandbox</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2020-08-12T16:14:15Z</td>\n",
+       "      <th>4079</th>\n",
+       "      <td>5875</td>\n",
+       "      <td>15.280_FA20</td>\n",
+       "      <td>15.280 Communication for Leaders: I1</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2020-08-22T20:36:10Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4874</th>\n",
-       "      <td>5795</td>\n",
-       "      <td>fendt</td>\n",
-       "      <td>Temporary Sandbox</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2020-08-12T16:14:15Z</td>\n",
+       "      <th>4080</th>\n",
+       "      <td>5876</td>\n",
+       "      <td>15.280_FA20</td>\n",
+       "      <td>15.280 Communication for Leaders: I2</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2020-08-22T20:36:10Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4875</th>\n",
-       "      <td>5796</td>\n",
-       "      <td>rtb</td>\n",
+       "      <th>4081</th>\n",
+       "      <td>5877</td>\n",
+       "      <td>pao:1</td>\n",
        "      <td>Temporary Sandbox</td>\n",
        "      <td>139</td>\n",
-       "      <td>2020-08-12T20:30:50Z</td>\n",
+       "      <td>2020-08-22T23:24:08Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2338 rows × 5 columns</p>\n",
+       "<p>2410 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      course_id     course_code  \\\n",
-       "2361       3145     CNV-SANDBOX   \n",
-       "2362       3146        CNV-GROW   \n",
-       "2363       3147           Admin   \n",
-       "2364       3148  IntroCDO_MBA22   \n",
-       "2365       3149       Template1   \n",
+       "1493       3145     CNV-SANDBOX   \n",
+       "1494       3146        CNV-GROW   \n",
+       "1495       3147           Admin   \n",
+       "1496       3148  IntroCDO_MBA22   \n",
+       "1497       3149       Template1   \n",
        "...         ...             ...   \n",
-       "4871       5792     21M.302 L02   \n",
-       "4872       5793         cwalley   \n",
-       "4873       5794        tbdavies   \n",
-       "4874       5795           fendt   \n",
-       "4875       5796             rtb   \n",
+       "4077       5873     15.280_FA20   \n",
+       "4078       5874     15.280_FA20   \n",
+       "4079       5875     15.280_FA20   \n",
+       "4080       5876     15.280_FA20   \n",
+       "4081       5877           pao:1   \n",
        "\n",
-       "                                            course_name  account_id  \\\n",
-       "2361                           Canvas Core Team Sandbox          86   \n",
-       "2362                                Growing with Canvas          86   \n",
-       "2363                                        Admin Guide          15   \n",
-       "2364   Career Foundations - Incoming MBA Class of 2022           36   \n",
-       "2365                                         Template 1           2   \n",
-       "...                                                 ...         ...   \n",
-       "4871  21M.302 Harmony and Counterpoint II, Lecture 2...         116   \n",
-       "4872                                  Temporary Sandbox         139   \n",
-       "4873                                  Temporary Sandbox         139   \n",
-       "4874                                  Temporary Sandbox         139   \n",
-       "4875                                  Temporary Sandbox         139   \n",
+       "                                           course_name  account_id  \\\n",
+       "1493                          Canvas Core Team Sandbox          86   \n",
+       "1494                               Growing with Canvas          86   \n",
+       "1495                                       Admin Guide          15   \n",
+       "1496  Career Foundations - Incoming MBA Class of 2022           36   \n",
+       "1497                                        Template 1           2   \n",
+       "...                                                ...         ...   \n",
+       "4077              15.280 Communication for Leaders: H1         241   \n",
+       "4078              15.280 Communication for Leaders: H2         241   \n",
+       "4079              15.280 Communication for Leaders: I1         241   \n",
+       "4080              15.280 Communication for Leaders: I2         241   \n",
+       "4081                                 Temporary Sandbox         139   \n",
        "\n",
        "                created_at  \n",
-       "2361  2020-05-05T16:03:19Z  \n",
-       "2362  2020-05-05T16:05:38Z  \n",
-       "2363  2020-05-08T18:13:52Z  \n",
-       "2364  2020-05-11T19:13:28Z  \n",
-       "2365  2020-05-12T16:17:55Z  \n",
+       "1493  2020-05-05T16:03:19Z  \n",
+       "1494  2020-05-05T16:05:38Z  \n",
+       "1495  2020-05-08T18:13:52Z  \n",
+       "1496  2020-05-11T19:13:28Z  \n",
+       "1497  2020-05-12T16:17:55Z  \n",
        "...                    ...  \n",
-       "4871  2020-08-12T14:59:01Z  \n",
-       "4872  2020-08-12T16:14:14Z  \n",
-       "4873  2020-08-12T16:14:15Z  \n",
-       "4874  2020-08-12T16:14:15Z  \n",
-       "4875  2020-08-12T20:30:50Z  \n",
+       "4077  2020-08-22T20:36:10Z  \n",
+       "4078  2020-08-22T20:36:10Z  \n",
+       "4079  2020-08-22T20:36:10Z  \n",
+       "4080  2020-08-22T20:36:10Z  \n",
+       "4081  2020-08-22T23:24:08Z  \n",
        "\n",
-       "[2338 rows x 5 columns]"
+       "[2410 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,21 +497,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:21: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:22: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 9)\n"
+      "(5, 10)\n"
      ]
     },
     {
@@ -537,6 +538,7 @@
        "      <th>course_id</th>\n",
        "      <th>Dept</th>\n",
        "      <th>Course_name</th>\n",
+       "      <th>course_state</th>\n",
        "      <th>num_files</th>\n",
        "      <th>num_assignments</th>\n",
        "      <th>num_tot_fa</th>\n",
@@ -551,6 +553,7 @@
        "      <td>3145</td>\n",
        "      <td>Canvas Testing</td>\n",
        "      <td>Canvas Core Team Sandbox</td>\n",
+       "      <td>available</td>\n",
        "      <td>11</td>\n",
        "      <td>15</td>\n",
        "      <td>26</td>\n",
@@ -563,6 +566,7 @@
        "      <td>3146</td>\n",
        "      <td>Canvas Testing</td>\n",
        "      <td>Growing with Canvas</td>\n",
+       "      <td>unpublished</td>\n",
        "      <td>36</td>\n",
        "      <td>10</td>\n",
        "      <td>46</td>\n",
@@ -575,6 +579,7 @@
        "      <td>3147</td>\n",
        "      <td>Manually-Created Courses</td>\n",
        "      <td>Admin Guide</td>\n",
+       "      <td>unpublished</td>\n",
        "      <td>26</td>\n",
        "      <td>0</td>\n",
        "      <td>26</td>\n",
@@ -587,6 +592,7 @@
        "      <td>3148</td>\n",
        "      <td>Open Membership</td>\n",
        "      <td>Career Foundations - Incoming MBA Class of 2022</td>\n",
+       "      <td>available</td>\n",
        "      <td>36</td>\n",
        "      <td>9</td>\n",
        "      <td>45</td>\n",
@@ -599,6 +605,7 @@
        "      <td>3149</td>\n",
        "      <td>Canvas Demo Courses</td>\n",
        "      <td>Template 1</td>\n",
+       "      <td>unpublished</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
@@ -618,12 +625,12 @@
        "3       3148           Open Membership   \n",
        "4       3149       Canvas Demo Courses   \n",
        "\n",
-       "                                        Course_name  num_files  \\\n",
-       "0                          Canvas Core Team Sandbox         11   \n",
-       "1                               Growing with Canvas         36   \n",
-       "2                                       Admin Guide         26   \n",
-       "3  Career Foundations - Incoming MBA Class of 2022          36   \n",
-       "4                                        Template 1          2   \n",
+       "                                        Course_name course_state  num_files  \\\n",
+       "0                          Canvas Core Team Sandbox    available         11   \n",
+       "1                               Growing with Canvas  unpublished         36   \n",
+       "2                                       Admin Guide  unpublished         26   \n",
+       "3  Career Foundations - Incoming MBA Class of 2022     available         36   \n",
+       "4                                        Template 1  unpublished          2   \n",
        "\n",
        "   num_assignments  num_tot_fa      last_update_at  if_LT_led  LT_email  \n",
        "0               15          26 2020-07-07 15:02:45          0       NaN  \n",
@@ -633,7 +640,7 @@
        "4                3           5 2020-05-12 16:18:43          0       NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,8 +649,8 @@
     "#Check that the migration/production/dev is set correctly\n",
     "all_course_list_0 = filtered_courses_df.course_id.tolist()\n",
     "all_course_list_0_rows = []\n",
-    "all_course_list_0_cols = ['course_id','Dept', 'Course_name', 'num_files', 'num_assignments', 'num_tot_fa',\n",
-    "                        'last_update_at']\n",
+    "all_course_list_0_cols = ['course_id','Dept', 'Course_name', 'course_state', 'num_files', 'num_assignments',\n",
+    "                          'num_tot_fa','last_update_at']\n",
     "\n",
     "if run_mode == 'dev' or run_mode=='mig':\n",
     "    num_courses = 5\n",
@@ -662,21 +669,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:21: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:22: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(38, 9)\n"
+      "(49, 10)\n"
      ]
     }
    ],
@@ -718,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,6 +746,7 @@
     "all_courses_df['if_active_since_June1'] = np.where(all_courses_df.last_update_at>=pd.to_datetime('2020-06-01'),\n",
     "                                                   True, False)\n",
     "all_courses_df['if_sandbox_course'] = np.where(all_courses_df.Dept=='Sandboxes', 1, 0)\n",
+    "all_courses_df['if_default_fa'] = np.where(all_courses_df.num_tot_fa==26, 1, 0)\n",
     "all_courses_df = all_courses_df[all_courses_df.course_id.notna()].reset_index(drop=True)\n",
     "all_courses_df.drop_duplicates(subset=['course_id'], keep='last', inplace=True)\n",
     "#all_courses_df.tail()"
@@ -746,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,14 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:09,  9.17s/it]\n"
+      "1it [00:04,  4.20s/it]\n"
      ]
     }
    ],
