added files created at dates

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x10635c9b0>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x10d98d710>}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "43   ajlwill@mit.edu  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,25 +259,34 @@
     "        assn_ = c1.get_assignments()\n",
     "        #Get the file updated times\n",
     "        file_utimes = [f_.updated_at for f_ in files_]\n",
-    "\n",
+    "        \n",
+    "        #Get the file created times\n",
+    "        file_ctimes = [f_.created_at for f_ in files_]\n",
+    "        \n",
     "        #Get the assignment updated times\n",
     "        assn_utimes = [a_.updated_at for a_ in assn_]\n",
     "        fa_times = file_utimes + assn_utimes\n",
+    "        \n",
+    "        #Get the assignment created times\n",
+    "        assn_ctimes = [a_.created_at for a_ in assn_]\n",
+    "        fa_c_times = file_ctimes + assn_ctimes\n",
     "\n",
+    "        \n",
     "        #Convert the whole thing \n",
     "        fa_times = np.array(fa_times, dtype='datetime64')\n",
+    "        fa_c_times = np.array(fa_c_times, dtype='datetime64')        \n",
     "\n",
     "\n",
     "\n",
     "        return [c1.id, course_dept, course_name, course_state, len(file_utimes), len(assn_utimes), \n",
-    "                len(fa_times), fa_times.max()]\n",
+    "                len(fa_times), fa_times.max(), fa_c_times.min()]\n",
     "    except Exception as e:\n",
-    "        return [None, None, None, None, None, None, None, None]"
+    "        return [None, None, None, None, None, None, None, None, None]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,48 +383,48 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4077</th>\n",
-       "      <td>5873</td>\n",
-       "      <td>15.280_FA20</td>\n",
-       "      <td>15.280 Communication for Leaders: H1</td>\n",
-       "      <td>241</td>\n",
-       "      <td>2020-08-22T20:36:10Z</td>\n",
+       "      <th>4087</th>\n",
+       "      <td>5884</td>\n",
+       "      <td>21G.704.02</td>\n",
+       "      <td>21G.704.02 Spanish IV</td>\n",
+       "      <td>113</td>\n",
+       "      <td>2020-08-25T14:12:52Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4078</th>\n",
-       "      <td>5874</td>\n",
-       "      <td>15.280_FA20</td>\n",
-       "      <td>15.280 Communication for Leaders: H2</td>\n",
-       "      <td>241</td>\n",
-       "      <td>2020-08-22T20:36:10Z</td>\n",
+       "      <th>4088</th>\n",
+       "      <td>5885</td>\n",
+       "      <td>KTCP FA20-2</td>\n",
+       "      <td>Kaufman Teaching Certificate Program (Section 2)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2020-08-25T15:23:43Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4079</th>\n",
-       "      <td>5875</td>\n",
-       "      <td>15.280_FA20</td>\n",
-       "      <td>15.280 Communication for Leaders: I1</td>\n",
-       "      <td>241</td>\n",
-       "      <td>2020-08-22T20:36:10Z</td>\n",
+       "      <th>4089</th>\n",
+       "      <td>5886</td>\n",
+       "      <td>KTCP FA20-3</td>\n",
+       "      <td>Kaufman Teaching Certificate Program (Section 3)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2020-08-25T15:24:05Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4080</th>\n",
-       "      <td>5876</td>\n",
-       "      <td>15.280_FA20</td>\n",
-       "      <td>15.280 Communication for Leaders: I2</td>\n",
-       "      <td>241</td>\n",
-       "      <td>2020-08-22T20:36:10Z</td>\n",
+       "      <th>4090</th>\n",
+       "      <td>5887</td>\n",
+       "      <td>KTCP FA20-4</td>\n",
+       "      <td>Kaufman Teaching Certificate Program (Section 4)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2020-08-25T15:25:04Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4081</th>\n",
-       "      <td>5877</td>\n",
-       "      <td>pao:1</td>\n",
-       "      <td>Temporary Sandbox</td>\n",
-       "      <td>139</td>\n",
-       "      <td>2020-08-22T23:24:08Z</td>\n",
+       "      <th>4091</th>\n",
+       "      <td>5888</td>\n",
+       "      <td>KTCP FA20-5</td>\n",
+       "      <td>Kaufman Teaching Certificate Program (Section 5)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2020-08-25T15:25:30Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2410 rows × 5 columns</p>\n",
+       "<p>2420 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -426,11 +435,11 @@
        "1496       3148  IntroCDO_MBA22   \n",
        "1497       3149       Template1   \n",
        "...         ...             ...   \n",
-       "4077       5873     15.280_FA20   \n",
-       "4078       5874     15.280_FA20   \n",
-       "4079       5875     15.280_FA20   \n",
-       "4080       5876     15.280_FA20   \n",
-       "4081       5877           pao:1   \n",
+       "4087       5884      21G.704.02   \n",
+       "4088       5885     KTCP FA20-2   \n",
+       "4089       5886     KTCP FA20-3   \n",
+       "4090       5887     KTCP FA20-4   \n",
+       "4091       5888     KTCP FA20-5   \n",
        "\n",
        "                                           course_name  account_id  \\\n",
        "1493                          Canvas Core Team Sandbox          86   \n",
@@ -439,11 +448,11 @@
        "1496  Career Foundations - Incoming MBA Class of 2022           36   \n",
        "1497                                        Template 1           2   \n",
        "...                                                ...         ...   \n",
-       "4077              15.280 Communication for Leaders: H1         241   \n",
-       "4078              15.280 Communication for Leaders: H2         241   \n",
-       "4079              15.280 Communication for Leaders: I1         241   \n",
-       "4080              15.280 Communication for Leaders: I2         241   \n",
-       "4081                                 Temporary Sandbox         139   \n",
+       "4087                             21G.704.02 Spanish IV         113   \n",
+       "4088  Kaufman Teaching Certificate Program (Section 2)          15   \n",
+       "4089  Kaufman Teaching Certificate Program (Section 3)          15   \n",
+       "4090  Kaufman Teaching Certificate Program (Section 4)          15   \n",
+       "4091  Kaufman Teaching Certificate Program (Section 5)          15   \n",
        "\n",
        "                created_at  \n",
        "1493  2020-05-05T16:03:19Z  \n",
@@ -452,16 +461,16 @@
        "1496  2020-05-11T19:13:28Z  \n",
        "1497  2020-05-12T16:17:55Z  \n",
        "...                    ...  \n",
-       "4077  2020-08-22T20:36:10Z  \n",
-       "4078  2020-08-22T20:36:10Z  \n",
-       "4079  2020-08-22T20:36:10Z  \n",
-       "4080  2020-08-22T20:36:10Z  \n",
-       "4081  2020-08-22T23:24:08Z  \n",
+       "4087  2020-08-25T14:12:52Z  \n",
+       "4088  2020-08-25T15:23:43Z  \n",
+       "4089  2020-08-25T15:24:05Z  \n",
+       "4090  2020-08-25T15:25:04Z  \n",
+       "4091  2020-08-25T15:25:30Z  \n",
        "\n",
-       "[2410 rows x 5 columns]"
+       "[2420 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,21 +506,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:22: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:30: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:31: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 10)\n"
+      "(5, 11)\n"
      ]
     },
     {
@@ -543,6 +553,7 @@
        "      <th>num_assignments</th>\n",
        "      <th>num_tot_fa</th>\n",
        "      <th>last_update_at</th>\n",
+       "      <th>first_created_at</th>\n",
        "      <th>if_LT_led</th>\n",
        "      <th>LT_email</th>\n",
        "    </tr>\n",
@@ -558,6 +569,7 @@
        "      <td>15</td>\n",
        "      <td>26</td>\n",
        "      <td>2020-07-07 15:02:45</td>\n",
+       "      <td>2020-05-08 17:50:26</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -571,6 +583,7 @@
        "      <td>10</td>\n",
        "      <td>46</td>\n",
        "      <td>2020-05-05 16:07:49</td>\n",
+       "      <td>2020-05-05 16:07:26</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -584,6 +597,7 @@
        "      <td>0</td>\n",
        "      <td>26</td>\n",
        "      <td>2020-05-08 18:15:06</td>\n",
+       "      <td>2020-05-08 18:14:55</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -597,6 +611,7 @@
        "      <td>9</td>\n",
        "      <td>45</td>\n",
        "      <td>2020-07-15 14:38:58</td>\n",
+       "      <td>2019-05-07 19:45:50</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -610,6 +625,7 @@
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>2020-05-12 16:18:43</td>\n",
+       "      <td>2020-05-12 16:18:40</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -632,15 +648,22 @@
        "3  Career Foundations - Incoming MBA Class of 2022     available         36   \n",
        "4                                        Template 1  unpublished          2   \n",
        "\n",
-       "   num_assignments  num_tot_fa      last_update_at  if_LT_led  LT_email  \n",
-       "0               15          26 2020-07-07 15:02:45          0       NaN  \n",
-       "1               10          46 2020-05-05 16:07:49          0       NaN  \n",
-       "2                0          26 2020-05-08 18:15:06          0       NaN  \n",
-       "3                9          45 2020-07-15 14:38:58          0       NaN  \n",
-       "4                3           5 2020-05-12 16:18:43          0       NaN  "
+       "   num_assignments  num_tot_fa      last_update_at    first_created_at  \\\n",
+       "0               15          26 2020-07-07 15:02:45 2020-05-08 17:50:26   \n",
+       "1               10          46 2020-05-05 16:07:49 2020-05-05 16:07:26   \n",
+       "2                0          26 2020-05-08 18:15:06 2020-05-08 18:14:55   \n",
+       "3                9          45 2020-07-15 14:38:58 2019-05-07 19:45:50   \n",
+       "4                3           5 2020-05-12 16:18:43 2020-05-12 16:18:40   \n",
+       "\n",
+       "   if_LT_led  LT_email  \n",
+       "0          0       NaN  \n",
+       "1          0       NaN  \n",
+       "2          0       NaN  \n",
+       "3          0       NaN  \n",
+       "4          0       NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +673,7 @@
     "all_course_list_0 = filtered_courses_df.course_id.tolist()\n",
     "all_course_list_0_rows = []\n",
     "all_course_list_0_cols = ['course_id','Dept', 'Course_name', 'course_state', 'num_files', 'num_assignments',\n",
-    "                          'num_tot_fa','last_update_at']\n",
+    "                          'num_tot_fa','last_update_at','first_created_at']\n",
     "\n",
     "if run_mode == 'dev' or run_mode=='mig':\n",
     "    num_courses = 5\n",
@@ -669,21 +692,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:22: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:30: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:31: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(49, 10)\n"
+      "(49, 11)\n"
      ]
     }
    ],
@@ -725,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,24 +778,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_courses_df['last_update_at'] = all_courses_df['last_update_at'].dt.strftime('%Y-%m-%d')\n",
+    "all_courses_df['first_created_at'] = all_courses_df['first_created_at'].dt.strftime('%Y-%m-%d')\n",
     "#all_courses_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:04,  4.20s/it]\n"
+      "1it [00:04,  4.26s/it]\n"
      ]
     }
    ],
@@ -779,6 +804,15 @@
     "all_courses_df[all_courses_df.if_sandbox_course==0]\n",
     "all_courses_df.to_gbq('lt_courses.{}'.format(out_table), project_id, if_exists='replace', credentials=credentials)\n",
     "#all_courses_df.to_csv('all_courses.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#all_courses_df['last_update_at']"
    ]
   }
  ],
